SET(WZMAPLIB_ENABLE_ZIPIOPROVIDER ON CACHE BOOL "wzmaplib: Provide ZipIOProvider (which requires libzip)" FORCE)
add_subdirectory(wzmaplib)
add_subdirectory(exceptionhandler)
add_subdirectory(framework)
add_subdirectory(gamelib)
add_subdirectory(ivis_opengl)
add_subdirectory(netplay)
add_subdirectory(sdl)
add_subdirectory(sound)
add_subdirectory(sequence)
add_subdirectory(widget)
