INSTALLERFILE=$(PACKAGE)-$(VERSION).exe
UPDATERFILE=$(PACKAGE)-$(VERSION).update.exe

CLEANFILES=$(INSTALLERFILE)

if INSTALLER
all: $(INSTALLERFILE)
endif

data:
	$(MAKE) $(AM_MAKEFLAGS) -C ../data/ data

$(INSTALLERFILE): warzone2100.nsi ../src/warzone2100.exe data
	$(MAKENSIS) -DVERSION="$(VERSION)" -DVERSIONNUM="$(INSTALLER_VERSION)" -DEXTDIR="$(INSTALLER_EXTDIR)" $<

$(UPDATERFILE): warzone2100.update.nsi
	$(MAKENSIS) -DVERSION="$(VERSION)" -DVERSIONNUM="$(INSTALLER_VERSION)" -DEXTDIR="$(INSTALLER_EXTDIR)" $<
